# omop-atlas-backend

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: index.md
src/omop_atlas_backend/: __init__.py  dependencies.py  main.py
src/omop_atlas_backend/api/: concept_set.py  vocabulary.py
src/omop_atlas_backend/cohort_definition/: base.py  core.py
src/omop_atlas_backend/models/: __init__.py  base.py  concept_set.py  security.py  vocabulary.py
src/omop_atlas_backend/schemas/: concept.py  concept_set.py
src/omop_atlas_backend/services/: concept_set.py  exceptions.py  vocabulary.py
src/omop_atlas_backend/utils/: __init__.py  logger.py
tests/: conftest.py  test_api_vocabulary.py  test_dependencies.py  test_main.py  test_models_vocabulary.py  test_models_vocabulary_db.py  test_schemas_concept.py  test_schemas_concept_set_unit.py  test_services_concept_set.py  test_services_concept_set_unit.py  test_services_concept_set_update_delete.py  test_services_vocabulary.py  test_services_vocabulary_complex.py  test_services_vocabulary_related.py  test_services_vocabulary_related_redis.py  test_utils.py  test_vocabulary.py  test_vocabulary_data.py  test_vocabulary_service.py
tests/api/: test_concept_set_api.py  test_vocabulary.py  test_vocabulary_api.py
tests/cohort_definition/: test_core.py
tests/models/: test_concept_set_models.py  test_security_models.py  test_vocabulary.py  test_vocabulary_models.py
tests/schemas/: test_concept.py  test_concept_set.py
tests/services/: test_vocabulary.py  test_vocabulary_service.py
